[package]
name = "gdrive_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.6"
chrono = "0.4.31"
dotenvy = "0.15.7"
openssl = "0.10.62"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json"] }
ring = "0.17.7"
serde_json = "1.0.111"
thiserror = "1.0.56"
